unpackaged/main/default/objects/nbavs__UserVoicemail__c/nbavs__UserVoicemail__c.object-meta.xml
<CustomObject>
    <label>User Voicemail</label>
    <nameField>
        <displayFormat>VM-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Voicemails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>