unpackaged/main/default/objects/nbavs__UserVoicemail__c/fields/nbavs__LegUser__c.field-meta.xml
<CustomField>
    <fullName>nbavs__LegUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LegUserID Lookup LegUser value.</description>
    <label>Leg User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>User Voicemails (Natterbox User)</relationshipLabel>
    <relationshipName>LegUser</relationshipName>
    <type>Lookup</type>
</CustomField>