unpackaged/main/default/objects/nbavs__UserVoicemail__c/fields/nbavs__LegUserID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__LegUserID__c</fullName>
    <description>The User ID that the call was originated from</description>
    <label>Leg UserID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>