unpackaged/main/default/objects/nbavs__UserVoicemail__c/fields/nbavs__Owner__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Natterbox User Owner</description>
    <label>Owner</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>User Voicemails (Natterbox User)</relationshipLabel>
    <relationshipName>Owner</relationshipName>
    <type>Lookup</type>
</CustomField>