unpackaged/main/default/objects/nbavs__UserVoicemail__c/fields/nbavs__VMStatus__c.field-meta.xml
<CustomField>
    <fullName>nbavs__VMStatus__c</fullName>
    <defaultValue>true</defaultValue>
    <label>VMStatus</label>
    <type>Checkbox</type>
</CustomField>