unpackaged/main/default/objects/nbavs__UserVoicemail__c/fields/nbavs__VMUser__c.field-meta.xml
<CustomField>
    <fullName>nbavs__VMUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Voicemail User Name lookup in to Natterbox User.</description>
    <label>VM User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>User Voicemails (Natterbox User)</relationshipLabel>
    <relationshipName>VMUser</relationshipName>
    <type>Lookup</type>
</CustomField>