unpackaged/main/default/objects/nbavs__UserVoicemail__c/fields/nbavs__VMUserID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__VMUserID__c</fullName>
    <description>The User ID of user for whom a voice mail was left</description>
    <label>VM UserID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>